# cse

./: README.md
config/realsense_d435i/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
ov_cse_filter/: CMakeLists.txt  package.xml
ov_cse_filter/config/: cam_params.yaml  cse.rviz  detector.rviz  quad_params.yaml
ov_cse_filter/include/dynamic_estimator/: dynamic_estimator.h  v_tools.h
ov_cse_filter/launch/: detector.launch  estimator.launch  sub_pose.launch
ov_cse_filter/msg/: PointId.msg  PointIdArray.msg
ov_cse_filter/src/: detector.cpp  detector_global.cpp  dynamic_estimator.cpp  dynamic_estimator_batch.cpp  dynamic_estimator_node.cpp  message_handler.cpp  pos_from_py.cpp  sub_gps.cpp  sub_pose.cpp  v_tools.cpp
ov_cse_optimization/: CMakeLists.txt  package.xml
ov_cse_optimization/config/: quad_params.yaml
ov_cse_optimization/launch/: estimator.launch
ov_cse_optimization/src/: estimator.cpp  estimator.h  estimator_batch.cpp  estimator_node.cpp  parameters.cpp  parameters.h
ov_cse_optimization/src/factor/: imu_factor.h  integration_base.h  p_factor.h
ov_msckf/: package.xml
ov_msckf/cmake/: ROS1.cmake
ov_msckf/launch/: create_bag.launch  create_bag_aerolab.launch  projection_test.launch  serial.launch  serial_realsense_d435i.launch
ov_msckf/src/: create_bag.cpp  create_bag_aerolab.cpp  create_bag_aerolab_optitrack.cpp  create_bag_aerolab_optitrack_opt.cpp  projection_test.cpp  ros1_serial_msckf.cpp  subscribe_gazebo.cpp
ov_msckf/src/core/: VioManager.cpp  VioManager.h
ov_msckf/src/ros/: ROS1Visualizer.cpp  ROS1Visualizer.h
