<?xml version="1.0"?>
<package format="2">
    <name>ov_cse_filter</name>
    <version>0.0.1</version>
    <description>ov_cse_filter for robot</description>

    <maintainer email="junlin.song@uni.lu">junlin.song</maintainer>

    <license>GPL-3.0</license>

    <author>junlin.song</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>roscpp</depend>
    <depend>rosbag</depend>

    <export>
    </export>
</package>
